addto login.html - [view] forget your password

--- a/src/login.html
+++ b/src/login.html
@@ -31,8 +31,9 @@
 			<span class="floating-label">password:</span>
 		</div>
 		
-		<div class="pull-right">
-			<input type="submit" value="login" class="submit">
+		<div class="">
+			<p class="pull-left mt15"><small>forget your password?</small></p>
+			<input type="submit" value="login" class="pull-right submit">
 		</div>
 	</div>
 </form>
