fix login.html - [view] errorMessagge

--- a/src/login.html
+++ b/src/login.html
@@ -30,10 +30,13 @@
 			<input type="password" class="inputText" name="password" required>
 			<span class="floating-label">password:</span>
 		</div>
+		<div class="mt10 text-center">
+			<p id="errorMessage"></p>
+		</div>
 		
 		<div class="">
-			<p class="pull-left mt15"><small>forget your password?</small></p>
-			<input type="submit" value="login" class="pull-right submit">
+			<p class="pull-left mt10"><small>forget your password?</small></p>
+			<input type="button" value="login" class="pull-right submit">
 		</div>
 	</div>
 </form>
