fix login.html - doc

--- a/src/login.html
+++ b/src/login.html
@@ -37,7 +37,7 @@
 		
 		<div class="">
 			<p class="pull-left mt10"><small>forget your password?</small></p>
-			<input type="button" value="login" class="pull-right submit" onclick="checkUsername()">
+			<input type="button" value="login" class="pull-right login-btn" onclick="login()">
 		</div>
 	</div>
 </form>
