--- a/src/login.html
+++ b/src/login.html
@@ -7,18 +7,17 @@
 	<link rel="stylesheet" type="text/css" href="lib/fonts/font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<script src="lib/js/jquery.js"></script>
-	
+
 	<link rel="stylesheet" type="text/css" href="assets/css/login.css">
 	<title>i3albo</title>
 </head>
 <body>
 
 <form class="center-block v-center">
-	<script src="assets/js/requests/login.js"></script>
 	<img src="assets/img/logo.jpg" class="center-block center-logo">
-	
+
 	<div class="mt50"></div>
-	
+
 	<div class="login">
 		<div class="user-input-wrp">
 			<br/>
@@ -26,7 +25,7 @@
 			<span class="floating-label">username:</span>
 		</div>
 		<div class="mt10"></div>
-		
+
 		<div class="user-input-wrp pass">
 			<input type="password" class="inputText" id="password" required>
 			<span class="floating-label">password:</span>
@@ -34,10 +33,10 @@
 		<div class="mt10 text-center">
 			<p id="errorMessage"></p>
 		</div>
-		
+
 		<div class="">
 			<p class="pull-left mt10"><small>forget your password?</small></p>
-			<input type="button" value="login" class="pull-right login-btn" onclick="login()">
+			<input type="button" value="login" class="pull-right login-btn" id="loginBtn">
 		</div>
 	</div>
 </form>
@@ -45,6 +44,6 @@
 <div class="copy">
 	<p>copyright 2018 &copy; i3albo</p>
 </div>
-
+<script src="assets/js/requests/login.js"></script>
 </body>
 </html>
