--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 	
 	
 	<link rel="stylesheet" type="text/css" href="assets/css/login.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/nav.css">
 	<title>i3albo</title>
 	
 	<script src="lib/js/angularJS/angular.min.js"></script>
