--- a/src/index.html
+++ b/src/index.html
@@ -26,9 +26,11 @@
 
 <!-- Controllers -->
 <script src="assets/js/controllers/DashTasksController.js"></script>
+<script src="assets/js/controllers/DashTestsController.js"></script>
 
 <!-- Services -->
 <script src="assets/js/services/dashTasks.js"></script>
+<script src="assets/js/services/dashTests.js"></script>
 
 </body>
 </html>
