fix dashboard - event controller

--- a/src/index.html
+++ b/src/index.html
@@ -27,10 +27,12 @@
 <!-- Controllers -->
 <script src="assets/js/controllers/DashTasksController.js"></script>
 <script src="assets/js/controllers/DashTestsController.js"></script>
+<script src="assets/js/controllers/DashEventsController.js"></script>
 
 <!-- Services -->
 <script src="assets/js/services/dashTasks.js"></script>
 <script src="assets/js/services/dashTests.js"></script>
+<script src="assets/js/services/dashEvents.js"></script>
 
 </body>
 </html>
