fix index - mobile scale

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+	<meta content="width=device-width, initial-scale=1" name="viewport" />
+	
 	<link rel="stylesheet" type="text/css" href="lib/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="lib/css/drp-dropdown.css">
 	<link rel="stylesheet" type="text/css" href="lib/fonts/font-awesome/css/font-awesome.min.css">
